--- a/HNG-stage1/index.html
+++ b/HNG-stage1/index.html
@@ -14,7 +14,7 @@
             <p data-testid="currentDay">Current Day: <span id="Day"></span></p>
         </div>  
         <div class="container">
-            <div>
+            <div class="image_container">
                 <img id="myImage" data-testid="slackProfilePicture" src="./images/Profile_picture.jpg" alt="slack profile picture"/>
             </div>   
             <div class="profileDetails">
