added another picture

--- a/HNG-stage1/index.html
+++ b/HNG-stage1/index.html
@@ -15,7 +15,7 @@
         </div>  
         <div class="container">
             <div>
-                <img id="myImage" data-testid="slackProfilePicture" src="./images/Profile_picture.jpg" alt="slack profile picture"/>
+                <img id="myImage" data-testid="slackProfilePicture" src="./images/My-profile_picture.jpg" alt="slack profile picture"/>
             </div>   
             <div class="profileDetails">
                 <p data-testid="slackDisplayName"><strong>NAME:</strong> Imafidon Oseremen Tabitha </p>
